<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">fshow</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="placeholder">Placeholder</string>
    <string name="empty"></string>
    <string name="update">更新</string>
    <string name="screen_switch">画面切り替え</string>
    <string name="new_item">アイテム登録</string>
    <string name="name">名前</string>
    <string name="email">メールアドレス</string>
    <string name="password">パースワード</string>
    <string name="register">登録</string>
    <string name="upload">アップロード</string>
    <string name="exception_message">アップロード失敗しました。</string>
    <string name="user">ログイン</string>
    <string name="browse">イメージ選択</string>
    <string name="upload_image">イメージをアップロードする</string>
    <string name="login">ログイン</string>
    <string name="myitem">登録したアイテムのみ</string>
    <string name="allitem">全てアイテム</string>
    <string name="coordinate">コーディネート</string>
</resources>
