<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings">
    </item>
    <item
        android:id="@+id/action_update"
        android:icon="@android:drawable/ic_popup_sync"
        android:showAsAction="ifRoom"
        android:title="@string/update">
    </item>
    <item
        android:id="@+id/action_switch"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="ifRoom"
        android:title="@string/screen_switch">
    </item>
    <item
        android:id="@+id/action_new"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/new_item">
    </item>

</menu>